# SimpleGPUAlgorithms

./: .gitignore  README.md  SimpleGPUAlgorithms.sln
Atomic/: atomicCAS.cpp  atomicCAS.cu
DiskSampling/: diskSampler.py  goldenRatio.py  halton.py  plotComparison.py  poissonSampler.py
FilterLDS/: FilterLDS.vcxproj  filter.cu  linear_math.h
Filtering/: Filtering.vcxproj  bilateral.cuh  common.cuh  guassian.cuh  kernel.cu  linear_math.h
FloatingPointPrecision/: FloatingPointPrecisionResearch.cpp  FloatingPointPrecisionResearch.sln  FloatingPointPrecisionResearch.vcxproj  FloatingPointPrecisionResearch.vcxproj.filters
ImageSampler/: CMakeLists.txt  ImageSampler.vcxproj  ImageSampler.vcxproj.filters  bicubic16.cpp  bicubic4.cpp  bilinear.cpp  catmull-rom4.cpp  catmull-rom5.cpp  nearest.cpp
LBVH/: LBVH.vcxproj  kernel.cu  linear_math.h
Quaternion/: linear_math.h  quaternionTest.cpp  quaternionTest.sln  quaternionTest.vcxproj  quaternionTest.vcxproj.filters
RadixSort/: RadixSort.vcxproj  radix.cu
RadixSortBitonicMerge/: RadixSortBitonicMerge.vcxproj  radixBitonic.cu
RayTriangle/: RayTriangle.vcxproj  kernel.cu  samplerBlueNoiseErrorDistribution_128x128_OptimizedFor_2d2d2d2d_1spp.h
Scan/: Scan.vcxproj  scan.cu
